fixing alignment

--- a/real/src/About/index.css
+++ b/real/src/About/index.css
@@ -5,11 +5,11 @@ body{
 .about-container{
     font-size: 35px;
     text-align: center;
-    background-color: rgb(223, 189, 195);
+    background-color: rgb(210, 176, 175);
     width: 1300px;
     height: 350px;
     margin-left: 15%;
-    margin-bottom: 2%;
+    margin-bottom: 10%;
     
 }
 
@@ -34,7 +34,7 @@ body{
         width: 270px;
         height: 110px;
         margin-left: 2%;
-        
+        margin-bottom: 10%;
         
         
     }
@@ -59,6 +59,7 @@ body{
         width: 370px;
         height:150px;
         margin-left: 0.5%;
+        margin-bottom: 10%;
         
         
     }
@@ -82,7 +83,7 @@ body{
         width: 350px;
         height:150px;
         margin-left: 1.5%;
-        /* margin-bottom: 2%; */
+        margin-bottom: 10%;
         
     }
 
@@ -107,7 +108,7 @@ body{
         width: 380px;
         height:150px;
         margin-left: 1.4%;
-        /* margin-bottom: 2%; */
+        margin-bottom: 10%;
         
     }
 
@@ -130,7 +131,7 @@ body{
         width: 385px;
         height:150px;
         margin-left: 1%;
-        /* margin-bottom: 2%; */
+        margin-bottom: 10%;
         
     }
 
@@ -154,6 +155,7 @@ body{
         width: 406px;
         height: 150px;
         margin-left: 1%;
+        margin-bottom: 10%;
         
     }
 
@@ -178,7 +180,7 @@ body{
         width: 1005px;
         height: 350px;
         margin-left: 2%;
-        margin-bottom: 0.5%;
+        margin-bottom: 10%;
         
         
     }
@@ -203,7 +205,7 @@ body{
         width: 805px;
         height:250px;
         margin-left: 1.1%;
-        /* margin-bottom: 2%; */
+        margin-bottom: 10%;
         
     }
 
@@ -229,7 +231,7 @@ body{
         width: 750px;
         height:300px;
         margin-left: 1.2%;
-        /* margin-bottom: 2%; */
+        margin-bottom: 10%;
         
     }
 
@@ -249,7 +251,7 @@ body{
         background-color: rgb(237, 232, 235);
     }
     
-    .about{
+    .about-container{
         font-size: 30px;
         text-align: center;
         flex-wrap: wrap;
@@ -257,7 +259,7 @@ body{
         width: 900px;
         height: 300px;
         margin-left: 0.7%;
-        margin-bottom: 2%;
+        margin-bottom: 10%;
         
     }
 
@@ -274,7 +276,7 @@ body{
         background-color: rgb(237, 232, 235);
     }
     
-    .about{
+    .about-container{
         font-size: 25px;
         text-align: center;
         flex-wrap: wrap;
@@ -282,6 +284,7 @@ body{
         width: 1250px;
         height: 300px;
         margin-left: 4%;
+        margin-bottom: 10%;
         
     }
 
@@ -298,14 +301,15 @@ body{
         background-color: rgb(237, 232, 235);
     }
     
-    .about{
+    .about-container{
         font-size: 29px;
         text-align: center;
         flex-wrap: wrap;
         background-color: rgb(223, 189, 195);
         width: 1400px;
         height: 300px;
-        margin-left: 10%;
+        margin-left: 12%;
+        margin-bottom: 10%;
         
     }
 
