--- a/real/src/Product/index.css
+++ b/real/src/Product/index.css
@@ -3,11 +3,12 @@
     gap: 5%;
     justify-content: center;
     margin-top: 6%;
+  
 
 
 }
 body{
-    background-color: pink;
+    background-color: rgb(223, 209, 209);
 }
 .clothes{
     width: 500px;
@@ -27,6 +28,10 @@ top: 25px;
 
 }
 
+.largecontainer{
+    margin-bottom: 12%;
+}
+
 @media (min-width: 250px) and (max-width: 750px){
     .images{
       
@@ -38,11 +43,11 @@ top: 25px;
     
     }
     body{
-        background-color: pink;
+        background-color: rgb(223, 209, 209);
     }
     .clothes{
-        width: 300px;
-        height: 280px;
+        width: 250px;
+        height: 250px;
         border-radius: 10px;
         margin-top: 5%;
 
@@ -54,9 +59,12 @@ top: 25px;
        /* position: relative; */
     top: 20px;
     
-    }
+  
 
 }
+
+}
+
 @media (min-width: 760px) and (max-width: 1023px){
     .images{
 
@@ -87,15 +95,20 @@ top: 25px;
 @media (min-width: 1020px) and (max-width: 1280px){
     .images{
         display: flex;
-        gap: 1%;
+        /* gap: 10%; */
     
     }
 
     .clothes{
-        width: 400px;
-        height: 380px;
+        width: 1200px;
+        height: 600px;
         /* margin-top: 5%; */
         border-radius: 10%;
+        /* justify-content: space-between; */
+        margin-right: 5%;
+        margin-left: 9%;
+        
+        
 
     }
 
@@ -104,6 +117,7 @@ top: 25px;
         font-size: 40px;
         position: relative;
         top: 40px;
+        margin-left: 32%;
     
     }
 
@@ -112,15 +126,17 @@ top: 25px;
     .images{
 
         display: flex;
-        gap: 3%;
+        gap: 20%;
 
     }
 
     .clothes{
-        width: 300px;
-        height: 280px;
+        width: 1200px;
+        height: 525px;
         /* margin-top: 5%; */
         border-radius: 10%;
+        margin-right: 5%;
+        margin-left: 5%;
 
     }
 
@@ -129,6 +145,7 @@ top: 25px;
         font-size: 40px;
         position: relative;
         top: 40px;
+        margin-left: 32%;
     
     }
 
