--- a/real/src/Team/index.css
+++ b/real/src/Team/index.css
@@ -11,7 +11,7 @@
     display: flex;
     gap: 2%;
     font-size: 23px;
-    margin-left: 4%;
+    margin-left: 0.5%;
     font-weight: bold;
 }
 
@@ -79,7 +79,7 @@
         gap: 2px;
         font-size: 15px;
         flex-wrap: wrap;
-        margin-left: 15%;
+        margin-left:5%;
         font-weight: bold;
     }
     
@@ -122,7 +122,7 @@
         font-size: 15px;
         margin-left: 3px;
         flex-wrap: wrap;
-        margin-left: 16%;
+        margin-left: 5%;
         font-weight: bold;
     }
     
@@ -188,7 +188,7 @@
 
 
 
-@media screen and (min-width:750px) and (max-width:980px){
+@media screen and (min-width:768px) and (max-width:820px){
     .team{
         border-radius: 50%;
         width: 340px;
@@ -202,7 +202,7 @@
         font-size: 20px;
         margin-left: 15%;
         flex-wrap: wrap;
-        margin-left: 23%;
+        margin-left: 0.5%;
         font-weight: bold;
     }
     
@@ -213,7 +213,53 @@
         text-align: center;
     }
 
+
+    .teamshot{
+        font-size: 20px;
+        margin-left: 90px;
+    }
+
+
+
+    
 }
+
+
+
+@media screen and (min-width:821px) and (max-width:980px){
+    .team{
+        border-radius: 50%;
+        width: 340px;
+        height: 350px;
+        margin-top: 20%;
+    
+    }
+    
+    .images{
+        gap: 2%;
+        font-size: 20px;
+        margin-left: 15%;
+        flex-wrap: wrap;
+        margin-left: 3%;
+        font-weight: bold;
+    }
+    
+    
+    .collegues{
+        /* margin-left: -7%; */
+        font-size: 40px;
+        text-align: center;
+
+    }
+
+    .teamshot{
+        margin-left: 90px;
+    }
+
+
+}
+
+
     @media screen and (min-width:981px) and (max-width:1010px){
         .team{
             border-radius: 50%;
@@ -259,7 +305,7 @@
     .images{
         gap: 10px;
         font-size: 15px;
-        margin-left: 5%; font-weight: bold;
+        margin-left: 30%; 
         font-weight: bold;
     }
     
@@ -297,7 +343,7 @@
     .images{
         gap: 10px;
         font-size: 23px;
-        margin-left: 5%;
+        margin-left: 30%;
         font-weight: bold;
     }
     
